# PocketPico

./: CMakeLists.txt  Makefile  README.md
inc/: debug.h  gbcolors.h
mod/ili9xxx/: CMakeLists.txt  ili9xxx_font.c  ili9xxx_lcd.c  ili9xxx_lcd.h
src/: main.c
